--- a/proj/manager/templates/manager/index.html
+++ b/proj/manager/templates/manager/index.html
@@ -300,13 +300,13 @@
         </a>
         <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
           <li>
-            <a href="forms-elements.html">
-              <i class="bi bi-circle"></i><span>Form Elements</span>
+            <a href="/manager/addProducts/">
+              <i class="bi bi-circle"></i><span>Add Products</span>
             </a>
           </li>
           <li>
             <a href="forms-layouts.html">
-              <i class="bi bi-circle"></i><span>Form Layouts</span>
+              <i class="bi bi-circle"></i><span>Reschedule</span>
             </a>
           </li>
           <li>
